# backprop_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
conan/profiles/: linux_debug  x86_64_linux
src/: main.cpp
